# gradient-mechanics

./: .python-version  README.md  mkdocs.yml  pyproject.toml
docs/: architecture.md  getting_started.md  index.md
src/gradient_mechanics/: __init__.py
src/gradient_mechanics/benchmarking/: platform_info.py
src/gradient_mechanics/data/: episodes.py  gpu_dataloader.py  gpu_iterator.py  torch_loading.py  torchdata_loading.py  transforms.py  video_demuxing.py  video_indexing.py  video_transforms.py
src/tests/: benchmark_huggingface_images.py  benchmark_video_dataset.py  conftest.py  episodes_test.py  gpu_dataloader_test.py  gpu_iterator_test.py  image_dataset.py  image_dataset_test.py  transforms_test.py  video_dataset.py  video_demuxing_and_decoding_test.py  video_demuxing_test.py  video_fixture_generation.py  video_fixture_generation_test.py  video_indexing_test.py  video_transforms_test.py
