[project]
name = "gradient-mechanics"
version = "0.0.4"
description = "Accelerated deep learning."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cvcuda-cu12>=0.14.0",
    "numpy>=1.26.0",
    "nvidia-nvimgcodec-cu12>=0.5.0.13",
    "av>=13.1.0",
    "pynvvideocodec>=1.0.2",
    "torch>=2.0.1",
    "pycuda>=2025.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "datasets[vision]>=3.1.0",
    "mkdocs-material>=9.5.39",
    "pytest>=8.3.3",
    "tensorboard>=2.18.0",
    "tensorboard-plugin-profile>=2.18.0",
    "torchdata>=0.11.0",
    "torchvision>=0",
    "torch-tb-profiler>=0.4.3",
    "rich>=13.9.4",
    "ruff>=0.11.6",
    "ty>=0.0.1a11",
]

[tool.ty.src]
root = "./src/gradient_mechanics"

[tool.ty.rules]
unresolved-attribute = "ignore"
